broken style was correct on a previous commit

--- a/css/about.css
+++ b/css/about.css
@@ -90,6 +90,8 @@ nav a {
 
 hr {
     border: 0.5px dashed black;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .middle-content h2 {
